<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:background="@drawable/gradient1b"
    tools:context=".SecHomescreen" >

     <Button
         android:id="@+id/button1"
         android:layout_width="160dp"
         android:layout_height="60dp"
         android:layout_centerHorizontal="true"
         android:layout_above="@+id/button2"
         android:layout_marginBottom="15dp"
         android:background="@drawable/custombutton"
         
         android:text="@string/button1"
         android:gravity="center"
         android:textColor="#2d2f31" />
     <Button
         android:id="@+id/button2"
         android:layout_width="160dp"
         android:layout_height="60dp"
         android:layout_above="@+id/spclmsg"         
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
         android:background="@drawable/custombutton"
         android:gravity="center"
         android:text="@string/button2"
         android:textColor="#2d2f31" />

     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_above="@+id/button1"
         android:layout_marginTop="20dp"
         android:layout_marginRight="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginBottom="30dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:src="@drawable/main" android:contentDescription="@string/logo"/>

     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_height="50dp"
         android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:contentDescription="@string/footer"
          />

     <TextView
         android:id="@+id/spclmsg"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_above="@+id/imageView2"
         android:layout_alignRight="@+id/button2"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="30dp"
         android:text="@string/loginmsg"
         android:textColor="#2d2f31"
         android:textSize="13sp" />

     </RelativeLayout>


