
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/signup_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient2"
        tools:context=".Signup" >
        
        
        <LinearLayout
            style="@style/LoginFormContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/head"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                
                android:paddingTop="00dp"
                android:src="@drawable/main" android:contentDescription="@string/logo"/>

            <EditText
                android:id="@+id/uname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/field"
                android:hint="@string/prompt_name"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#ffffff"
                 >
                 <requestFocus />
                 
                 </EditText>
            
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="7dp"
                
                android:background="@drawable/field"
                
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/cpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="7dp"
                
                android:background="@drawable/field"
                
                android:hint="@string/prompt_cpassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/expend"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/field"
                android:hint="@string/prompt_expend"
                
                android:inputType="number"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#ffffff" />
            
            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="26dp"
                android:background="@drawable/custombutton"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/title_activity_signup"
                android:textColor="#2d2f31" />

            
            
        </LinearLayout>
       

    </ScrollView>
